support multiple concurrent deals
